# my-competitive-programming

./: .gitignore  README.md
Codeforces Round 862 (Div. 2)/: A. We Need the Zero .cpp  B. The String Has a Target.cpp
Contests/Codeforces Round 1003 (Div. 4)/: A. Skibidus and Amog'u.cpp  B. Skibidus and Ohio.cpp  C1. Skibidus and Fanum Tax (easy version).cpp  C2. Skibidus and Fanum Tax (hard version).cpp  CMakeLists.txt
DynamicProgramming/: 1_A_Kefa_and_First_Steps.cpp  2_A_Boredom.cpp  3_New_Years_Number.cpp  4_Stone_Game.cpp
FCAI - CU/: B_Primes.cpp  C_Matryoshka_Dolls.cpp  H_Circle_of_Polygon.cpp  I_Ultimate_Army.cpp  K_Birthday_Puzzle.cpp
Graphs/: A_Two_Buttons.cpp  B_Kefa_and_Park.cpp  C_Learning_Languages.cpp  C_Learning_Languages1.cpp  D_Reposts.cpp  E_Mr_Kitayutas_Colorful_Graph.cpp  F_Choosing_Capital_for_Treeland.cpp  G_Ice_Cave.cpp  H_Permutation_Transformation.cpp  I_Books_Exchange.cpp  J_DZY_Loves_Chemistry.cpp  K_Fox_And_Two_Dots.cpp  L_Secret_Passwords.cpp  Q7_8_9.cpp
Greedy/: C-Yet-Another-Two-Integers-Problem.cpp  D-Even-Array.cpp  E-Honest-Coach.cpp  F-Minimal-Square.cpp  G-Restore-the-Permutation-by-Merger.cpp  H-Two-Arrays.cpp  I-Kuroni-and-Simple-Strings.cpp  J-Kirill-And-The-Game.cpp  K-Pair-Programming.cpp  L-Where-Are-My-Flakes.cpp  main.cpp
STL/: C-Lecture.cpp  G-Amusing-Joke.cpp  I-Two-Substrings.cpp  J-Vasya-and-Football.cpp  K-Opposites-Attract.cpp  L-Radio-Station.cpp  M-Appleman-and-Toastman.cpp  N-Phone-Numbers.cpp  R-Memory-and-Trident.cpp  X-Tricky-Sum.cpp  Z-Sale.cpp
Sheet_A_MS/: 102_A_Alyona_and_Numbers.cpp  (+12 more)
(+948 files in other folders)
