cmake_minimum_required(VERSION 3.30)
project(Codeforces_Round_1003__Div__4_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Codeforces_Round_1003__Div__4_
#        "A. Skibidus and Amog'u.cpp"
#        "B. Skibidus and Ohio.cpp"
#        "C1. Skibidus and Fanum Tax (easy version).cpp"
        "C2. Skibidus and Fanum Tax (hard version).cpp")
